--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://sarthakgirotra.github.io/Todolist-react/",
   "devDependencies": {
     "react-snapshot": "^1.3.0"
   }
